--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
 [build-system]
-requires = ["maturin>=0.11,<0.12"]
+requires = ["maturin>=0.13.1,<0.14"]
 build-backend = "maturin"
 
 [tool.black]
 line-length = 79
-target_version = ['py39']
+target_version = ['py310']
+
+[tool.maturin]
+cargo-extra-args = "--features pyo3/extension-module"
